2006-10-27  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_TEXI2PDF): Require OCTAVE_PROG_TEXI2DVI.
	If texi2pdf is not found but texi2dvi is available, set TEXI2PDF
	to "$TEXI2DVI --pdf".
	(OCTAVE_PROG_GHOSTSCRIPT): Also check for gswin32 on Windows systems.

	* Makeconf.in (UNSETCOMSPEC): Define if COMSPEC is defined.
	From Michael Goffioul <michael.goffioul@swing.be>.

2006-10-26  John W. Eaton  <jwe@octave.org>

	* configure.in (OCTAVE_EXPORT, OCTAVE_IMPORT): New macros
	(CRUFT_API, OCTAVE_API, OCTINTERP_API): Define using OCTAVE_EXPORT
	and OCTAVE_IMPORT.

2006-10-26  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (*-*-msdosmsvc): Set library_path_var.
	Check for _WIN32_WINNT >= 0x0403.  Define _USE_MATH_DEFINES if it
	is needed.
	(XTRA_CRUFT_LINK_DEPS): New variable.  Substitute it.

	* aclocal.m4 (OCTAVE_MKDIR_TAKES_ONE_ARG): Perform check with C++
	compiler.

2006-10-26  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_PAGER): Also check for more.com for
	*-*-mingw* and *-*-msdosmsvc systems.

	* configure.in (F77_TOLOWER, F77_APPEND_UNDERSCORE,
	F77_APPEND_EXTRA_UNDERSCORE): New variables.  Substitute them.
	* Makeconf.in (F77_TOLOWER, F77_APPEND_UNDERSCORE,
	F77_APPEND_EXTRA_UNDERSCORE): Substitute here.
	(do-subst-f77-mangling): New macro.

	* emacs/octave-inf.el (inferior-octave-has-built-in-variables):
	New defvar.
	(inferior-octave-resync-dirs): Check to see whether Octave has
	built-in variables and set inferior-octave-has-built-in-variables.
	Check inferior-octave-has-built-in-variables to decide whether to
	send commands that set built-in variables or call functions to
	change Octave's behavior.
	Send "disp (pwd ())" to Octave instead of just "pwd".
	(inferior-octave-startup): Send "more off" to Octave instead of
	"page_screen_output = 0".

2006-10-25  John W. Eaton  <jwe@octave.org>

	* configure.in (RETSIGTYPE_IS_VOID): Define if
	"$ac_cv_type_signal" = "void".
