@@ -56,6 +56,8 @@ extern "C" {
 #include <stdlib.h>
 #endif
 
+#include "oct-dlldefs.h"
+
 #define MXARRAY_TYPEDEFS_ONLY
 #include "mxarray.h"
 #undef MXARRAY_TYPEDEFS_ONLY
